add Listing in section Serialization API

--- a/contents/02_Background.tex
+++ b/contents/02_Background.tex
@@ -12,11 +12,11 @@ In today's computer landscape security risks can come from untrusted software ru
 
 Especially when it comes to large-scale software systems robust code is key. Here the good fit of the object-oriented model and the platform independence make HLL-VMs the top technology in the field. How much a HLL-VM supports robustness is of course depending on the used VM but on the example of the Java Virtual Machine strong type-checking and garbage collection which will be explained later lift a burden from the programmer's shoulder making the programmer concentrate on the mere implementation and thus making code production more robust automatically because the execution environment is robust within itself. Additional merits of HLL-VMs come from technologies like dynamic linking saving network bandwidth or profiling for performance \cite{Smith}.
 
-As the start of this subsection already stated a HLL-VM is an abstraction layer with a lot of features making a programmer's life considerably easier. This comes with some costs most notably performance. This cost is then highly reduced by certain techniques like the aforementioned profiling. With the groundwork laid out the next section discusses certain features of the Java Virtual Machine.
+As the start of this subsection already stated an HLL-VM is an abstraction layer with a lot of features making a programmer's life considerably easier. This comes with some costs most notably performance. This cost is then highly reduced by certain techniques like the aforementioned profiling. With the groundwork laid out the next section discusses certain features of the Java Virtual Machine.
 
 \subsection{The Java Virtual Machine}
 \label{sec:JVM}
-The Java Virtual Machine (JVM) is, as its name states, developed around the language Java. Java is a general-purpose, object-oriented language with strong static types aimed as a production language \cite{Gosling}. Since one of the language's target is simplicity, details of machine representation are abstracted away from the user and not accessible through the language. This is in compliance with the points made in the HLL-VM chapter beforehand as the JVM serves as abstraction layer. First off, the programmer does not have to worry about the ISA/OS-couple, secondly the aforementioned garbage collection abstracts machine representation as well. Further, safety measures have been made like automatic storage management and checked array access. The Java sourcecode is usually compiled ahead of time (AOT) to \emph{Java bytecode} which is then run on the JVM. First up, what is java bytecode? Java bytecode is the instruction set of the JVM and is thus an intermediate form. Secondly, how and why is java bytecode created by AOT? Ahead of time compilation means that the programmed sourcecode gets compiled into a machine specific executable form. This form is, in the case of Java, Java bytecode, i.e. a class-file\cite{Gosling}. As stated before the JVM is the virtual sandbox environment in which an AOT-compiled java program, represented by the java bytecode, is executed. The JVM, like an actual machine, has an instruction set and access to various memory areas. With this in mind a JVM can also be directly implemented as a CPU or in various other direct ways. From knowing what the JVM is, the next paragraph dives deeper into the topic and explains how the JVM is constructed with the help of Figure \ref{fig:jvm}.
+The Java Virtual Machine (JVM) is, as its name states, developed around the language Java. Java is a general-purpose, object-oriented language with strong static types aimed as a production language \cite{Gosling}. Since one of the language's target is simplicity, details of machine representation are abstracted away from the user and not accessible through the language. This is in compliance with the points made in Section 2.1.1 as the JVM serves as abstraction layer. First off, the programmer does not have to worry about the ISA/OS-couple, secondly the aforementioned garbage collection abstracts machine representation as well. Further, safety measures have been made like automatic storage management and checked array access. The Java sourcecode is usually compiled ahead of time (AOT) to \emph{Java bytecode} which is then run on the JVM. First up, what is java bytecode? Java bytecode is the instruction set of the JVM and is thus an intermediate form. Secondly, how and why is java bytecode created by AOT? Ahead of time compilation means that the programmed sourcecode gets compiled into a machine specific executable form. This form is, in the case of Java, Java bytecode, i.e. a class-file\cite{Gosling}. As stated before the JVM is the virtual sandbox environment in which an AOT-compiled java program, represented by the java bytecode, is executed. The JVM, like an actual machine, has an instruction set and access to various memory areas. With this in mind a JVM can also be directly implemented as a CPU or in various other direct ways. From knowing what the JVM is, the next paragraph dives deeper into the topic and explains how the JVM is constructed with the help of Figure \ref{fig:jvm}.
 
 As already explained the JVM executes Java bytecode which can be in the form of *.class-files. Before the thesis dives into the structure one note has to be made: The JVM is usually delivered as a Java Runtime Environment (JRE) or Java Development Kit (JDK). These include besides the Java Virtual Machine also the Java Application Programming Interface (API) classes. These are not directly part of the JVM but play a vital role in the simplification process for code production that is undertaken by the Java project. The next paragraph talks about some Java specifics before taking the topic towards JVM details.
 
@@ -64,7 +64,7 @@ The native method stack is an optional data area not supported by all JVMs. If i
 
 The execution engine is mainly built up of three different components, the interpreter, the just-in-time (JIT) compiler and the garbage collector as can be looked up in Figure \ref{fig:jvm}. The interpreter is the part that executes the code directly/live including byte code getting translated to actual implementation-dependent machine code and its execution on the central processing unit (CPU) per instruction. This mechanism causes the interpreter to reinterpret, translate and execute the same code multiple times per instruction. This redundant interpreter pipeline work makes execution slow compared to AOT-compiled execution. When doing so the interpreter of the JVM profiles the run code for example by keeping track of how often a certain piece of code is executed. This profiling information is then used to choose the parts of code that get JIT-compiled hindering too many redundant interpretation steps.
 
-A part of the byte code chosen for JIT-compilation is compiled to machine code and gets thus turned from implementation independent form into implementation dependent form. Afterwards if this part of the program gets executed again the machine code gets executed directly out from the cache where it's stored in the meantime. This method of choosing code hotspots that get executed often for compilation rather than continuous interpretation is called adaptive compilation and is used in the Oracle Hotspot VM. \cite{Lindholm}
+A part of the byte code chosen for JIT-compilation is compiled to machine code and gets thus turned from implementation independent form into implementation dependent form. Afterwards if this part of the program gets executed again the machine code gets executed directly out from the cache where it's stored in the meantime. This method of choosing code hotspots that get executed often for compilation rather than continuous interpretation is called adaptive compilation and is used in the Oracle Hotspot VM \cite{Lindholm}.
 
 The last component left out so far is the garbage collector (GC). It takes care of objects without references resulting them to be unreachable by application code. Such an object will be removed by GC and memory will be freed up. The GC is part of inner workings and fully functions without user interaction but the programmer can make a not guaranteed call for the GC \cite{Lindholm}. In programming languages like C a programmer would have to free memory explicitly. The obvious advantage is more direct control by the programmer but the disadvantage are possible memory leaks. The GC thus cares for memory and consequently robust code. A disadvantage of the GC is its appearance as a black box which means as a programmer you can't be sure at what point in execution unreachable resources are deleted. This concludes the JVM discussion with a wrap-up in the next paragraph.
 
@@ -72,7 +72,7 @@ This section explained the JVM ecosystem. It is split up between an AOT-compiler
 
 \section{GraalVM}
 
-As seen in the last two sections building a virtual machine for executing programming languages is a non-trivial task needing a lot of effort. A lot of this effort has to be redone for different programming languages. The core idea of GraalVM is to reduce this effort via a layered structure where each language implementation is in essence an abstract syntax tree (AST) interpreter via the Truffle API. Progressing from Figure \ref{fig:jvm}, Figure \ref{fig:graalvm} shows the GraalVM which resembles the JVM in some parts. In the lower part of Figure \ref{fig:graalvm} the Hotspot Runtime Components can be seen.  Those are similar to the JVM but strippedoff the JIT Compiler from the execution engine. To compensate the Graal Components have been added on top as seen in the upper middle part of the figure. The ecosystem is then completed by the again set on top Truffle framework and the AST interpreter. Coming back to the JVM it can be said that all low-level tasks like JIT compiling, data areas, memory management, optimizations and the like are reused by each language implementation connecting to the GraalVM or any JVM via Truffle. Considering performance these implementations are best run on top of GraalVM. Reasons for that are explained in the next section.
+As seen in Section 2.1 building a virtual machine for executing programming languages is a non-trivial task needing a lot of effort. A lot of this effort has to be redone for different programming languages. The core idea of GraalVM is to reduce this effort via a layered structure where each language implementation is in essence an abstract syntax tree (AST) interpreter via the Truffle API. Progressing from Figure \ref{fig:jvm}, Figure \ref{fig:graalvm} shows the GraalVM which resembles the JVM in some parts. In the lower part of Figure \ref{fig:graalvm} the Hotspot Runtime Components can be seen.  Those are similar to the JVM but strippedoff the JIT Compiler from the execution engine. To compensate the Graal Components have been added on top as seen in the upper middle part of the figure. The ecosystem is then completed by the again set on top Truffle framework and the AST interpreter. Coming back to the JVM it can be said that all low-level tasks like JIT compiling, data areas, memory management, optimizations and the like are reused by each language implementation connecting to the GraalVM or any JVM via Truffle. Considering performance these implementations are best run on top of GraalVM. Reasons for that are explained in the next section.
 
 \begin{figure}[h!]
     \centering
@@ -118,11 +118,11 @@ The node rewriting process shown in Figure \ref{fig:trufNR} happens at various s
 
 One note on the compilation process: As expressed before, the compiler uses as said aggressive optimization methods. This operation is successful for stable ASTs. Then, compilation techniques like method inlining and eliminating interpreter dispatch code can be performed. This technique is called partial evaluation.
 
-In addition to type specialization truffle offers so-called polymorphic inline caches. \cite{ChambOpti} An inline cache itself is simply caching a method from a former lookup at a call site. In Truffle inline caches are built by chaining nodes which check for cached target matches which are then executed. At a predefined chain length the chain gets replaced by a polymorphic node handling all operations.
+In addition to type specialization truffle offers so-called polymorphic inline caches \cite{ChambOpti}. An inline cache itself is simply caching a method from a former lookup at a call site. In Truffle inline caches are built by chaining nodes which check for cached target matches which are then executed. At a predefined chain length the chain gets replaced by a polymorphic node handling all operations.
 
 As discussed in Section \ref{sec:JVM} program loading often requires resolution. An implemented truffle language can cache resolved targets at run time by replacing an unresolved node with its resolved version. Thus further resolutions of this node are prevented which leads to an optimized version of the AST.
 
-This section gave a small introduction into the Truffle API for implementing languages via an AST interpreter for running on top of a JVM and showed the optimizations that are conducted on AST level. After an AST at run time becomes stable with no more rewrites the AST is compiled dynamically to machine code. Truffle uses the JIT compiler of a JVM, in case of GraalVM the GraalVM compiler. If GraalVM is used the nodes' execute methods are inlined producing one compilation unit of the whole tree. In the next step the GraalVM compiler uses its aggressive optimization techniques for the whole inlined tree unit producing efficient machine code. These combined methods are based on the principle of the first Futamura Projection also called partial evaluation \cite{FutaPart}. As stated in Section \ref{sec:graalcomp} guards or also optimization points need to be implemented to check all the assumptions made before compilation. As soon as it is necessary to rewrite a node during machine code execution the control flow gets transferred back to the interpreted AST to rewrite the node either on profiling information to another specialized version or a more generic version. \cite{ChambDeopt}
+This section gave a small introduction into the Truffle API for implementing languages via an AST interpreter for running on top of a JVM and showed the optimizations that are conducted on AST level. After an AST at run time becomes stable with no more rewrites the AST is compiled dynamically to machine code. Truffle uses the JIT compiler of a JVM, in case of GraalVM the GraalVM compiler. If GraalVM is used the nodes' execute methods are inlined producing one compilation unit of the whole tree. In the next step the GraalVM compiler uses its aggressive optimization techniques for the whole inlined tree unit producing efficient machine code. These combined methods are based on the principle of the first Futamura Projection also called partial evaluation \cite{FutaPart}. As stated in Section \ref{sec:graalcomp} guards or also optimization points need to be implemented to check all the assumptions made before compilation. As soon as it is necessary to rewrite a node during machine code execution the control flow gets transferred back to the interpreted AST to rewrite the node either on profiling information to another specialized version or a more generic version \cite{ChambDeopt}.
 
 In conclusion the GraalVM project aims at simplifying language implementations and application programming while also trying to have a rapid run time. The simplification comes from introducing a framework for implementing languages as AST interpreters which can run on top of any JVM. The performance benefits are especially achieved from running the AST interpreter on top of the GraalVM which uses various techniques to bring run time performance to higher levels.
 %\begin{tikzpicture}[nodes={draw, circle}, ->, minimum size=2cm, level distance = 2.5cm, sibling distance = 2.5cm]
@@ -161,7 +161,7 @@ This standard unfortunately left out the possibility to add inline modules into 
 Before coming to module blocks themselves the general proposal process is to discussed in order to give insight at what development step the proposal resides at the time of this thesis. The ECMAScript proposal process \cite{ecmaProp} is split up in five stages from zero to four. The first notable stage is stage one where the general shape of the proposal has to be outlined with examples, problems and the shape of their solutions all collected in a public repository. At this stage the proposal is expected to undergo major changes. To be promoted to stage two the proposal has to include an initial spec text with all major semantics and syntax but allowing placeholders. The stage is still expected to undergo certain changes but the general outline should be set. To reach stage three the proposal needs to have a finished and complete spec text that has been reviewed. In simple words the theoretic groundwork is finished and further improvements need empirical knowledge gathered on actual implementations. From this stage on the proposal is expected to undergo minimal change. The final stage before acceptance is stage four. Apart from a finished specification the proposal needs acceptance tests in compliance with the rest of the ECMAScript tests and implementations that pass these tests as well as live experience by two VM implementations \cite{ecmaProp}. This concludes the proposal pipeline discussion which serves as a state overview for the upcoming proposal module blocks.
 
 \section{Proposal: Module blocks}
-Module blocks are an official TC39 proposal from Daniel Ehrenberg and Surma at stage 2 as of July 2021. \cite{gitMB} As stated ECMAScript does not have the feature of inlining modules. This causes several issues in programming applications, most notably code composition and file count but also CSP (Content Security Policy). In the current specified state if code should be run in parallel an additional file is needed resulting in every Worker (node.js feature) \cite{nodejs} needing a separate file. So module blocks work like a module but are inside the script where they are also imported. One important note to take is the non closure of module blocks following the principle of coding in one place, running it anywhere. It can thus also be imported from any Realm, i.e. a language context,\footnote{It should be noted that there is also a Realm proposal in the works which can enhance module block usage. https://github.com/tc39/proposal-realms (currently Stage 3)} and is code independent of a particular context. So in a sense module blocks are mainly a syntactical addition to ECMAScript as the concept is to provide a syntax for inlined module contents as can be seen by Figure \ref{fig:mbSyn}. \cite{gitMB, ecma} These can then afterwards be imported asynchronously. Reason being the ability of module blocks to import other modules as well. As regular modules since ES6 module blocks will be cached in the module map after the first import. One note to take is, that module blocks need to be imported via dynamic \texttt{import()} calls rather than import statements. This is due to them not being addressable as specifier strings. Dynamic import  has a particular positive impact on performance as module blocks will only be loaded on a base of need.
+Module blocks are an official TC39 proposal from Daniel Ehrenberg and Surma at stage 2 as of July 2021 \cite{gitMB}. As stated ECMAScript does not have the feature of inlining modules. This causes several issues in programming applications, most notably code composition and file count but also CSP (Content Security Policy). In the current specified state if code should be run in parallel an additional file is needed resulting in every Worker (node.js feature) \cite{nodejs} needing a separate file. So module blocks work like a module but are inside the script where they are also imported. One important note to take is the non closure of module blocks following the principle of coding in one place, running it anywhere. It can thus also be imported from any Realm, i.e. a language context,\footnote{It should be noted that there is also a Realm proposal in the works which can enhance module block usage. https://github.com/tc39/proposal-realms (currently Stage 3)} and is code independent of a particular context. 
 
 \begin{figure}[h!]
     \centering
@@ -170,4 +170,5 @@ Module blocks are an official TC39 proposal from Daniel Ehrenberg and Surma at s
     \label{fig:mbSyn}
 \end{figure}
 
+In this sense module blocks are mainly a syntactical addition to ECMAScript as the concept is to provide a syntax for inlined module contents as can be seen by Figure \ref{fig:mbSyn} \cite{gitMB, ecma}. These can then afterwards be imported asynchronously. Reason being the ability of module blocks to import other modules as well. As regular modules since ES6 module blocks will be cached in the module map after the first import. One note to take is, that module blocks need to be imported via dynamic \texttt{import()} calls rather than import statements. This is due to them not being addressable as specifier strings. Dynamic import  has a particular positive impact on performance as module blocks will only be loaded on a base of need and as stated are cached as well.
 %The whole module loading process can be pictured as a graph and as ModuleBlocks are only imported via dynamic import this creates a second graph. Hence the ModuleBlock's module references are processed separately from the referencing module.
