--- a/contents/03_Implementation.tex
+++ b/contents/03_Implementation.tex
@@ -48,11 +48,24 @@ As mentioned above, dynamic imports is the only feature of the ECMAScript specif
 
 \section{Serialization framework}
 
-This section presents the framework for transferring module block source code from one process to another, i.e. one machine to another, potentially via network. This framework is not part of the module block proposal for ECMAScript, but a testing ground for the potential of the proposal. The goal is aimed for by implementing the framework is to offer code transfer over the network in a syntactically simple way. For this to be possible two functions have to be implemented and registered at the global object in JavaScript. Their names exactly match their purpose: \texttt{serialize} and \texttt{deserialize}. The serialize method is straightforward and is oriented on the \texttt{toString}-method by accessing the \texttt{SourceText} property and then taking the string gained from the access and turning it into a byte-array. Fortunately, Java itself has a builtin method for strings turning them into a byte array using the executing platform's standard charset. This already concludes the serialization of a module block. The deserialization involves a few more steps. The given byte-array has to be turned back into a string, which again is builtin into Java, as the string class has a constructor taking a byte-array and a charset. Then an internal source object has to be created. The source object is created via the beforehand created string. Then the source code has to be parsed and translated as explained in Sections 3.2 and 3.3.
+This section presents the framework for transferring module block source code from one process to another, i.e. one machine to another, potentially via network. This framework is not part of the module block proposal for ECMAScript, but a testing ground for the potential of the proposal. The goal is aimed for by implementing the framework is to offer code transfer over the network in a syntactically simple way. For this to be possible two builtin functions have to be implemented and registered at the \texttt{ModuleBlock} object in JavaScript. Their names exactly match their purpose: \texttt{serialize} and \texttt{deserialize}. The serialize method is straightforward and is oriented on the \texttt{toString}-method by accessing the \texttt{SourceText} property and then taking the string gained from the access and turning it into a String. This already concludes the serialization of a module block. The deserialization involves a few more steps. The given String has to be used to create an internal source object. Then the source code has to be parsed and translated as explained in Sections 3.2 and 3.3 to retrieve a \texttt{JSModuleRecord}. This record in turn is instantiated and evaluated and its resulting namespace is returned. The usage of the two builtin functions can be seen in Listing \ref{fig:globModuleAPI} where a module block is first created in Line 2, then serialized in Line 3, prepared for usage in a different module via deserialization in Line 8 and then gets used in Line 10.
+
+ \begin{lstlisting}[caption={ModuleBlock serialization / deserialization}, label={fig:globModuleAPI}]
+     // serialize module
+    var moduleBlock = module { export var test = 5; };
+    export var moduleBlock = ModuleBlock.prototype.serialize(moduleTest);
+    
+    // deserialize module
+    import * as modules from 'moduleBlockSerializeModule.js';
+    
+    var tester = ModuleBlock.prototype.deserialize(modules.moduleBlock);
+    
+    vonsole.log(tester.test); // 5
+\end{lstlisting} 
 
 \section{Wrap up}
 
-On regard of parsing the main difference between module blocks and modules is the outside call onto the class when parsing modules but module blocks have to be caught from inside the parser. Hence the parser is told explicitly to parse a module from another class while a module block is caught by the inner class's logic and will from then on be treated similarly to the regular module. Both parsing results are then encapsulated into the same intermediate representation as a \texttt{FunctionNode}. When translating this intermediate representation into the final AST representative the path of modules and module blocks splits up again as the module block is transformed into a \texttt{ModuleBlockNode} and the module is transformed into a \texttt{JSFunctionExpressionNode}. Finally as those constructs are imported, in the module's case also statically, dynamically the final result will always be a \texttt{JSModuleRecord} which is the AST's representation of the, in ECMAScript specified \cite{ecma}, Module Records. The description is also envisioned by the subsequent Figure \ref{fig:blockVSmodule} This brief difference in behavior explanation concludes the implementation chapter which is followed by the evaluation chapter detailing the testing of the as set out above implementation.
+On regard of parsing the main difference between module blocks and modules is the outside call onto the class when parsing modules but module blocks have to be caught from inside the parser. Hence the parser is told explicitly to parse a module from another class while a module block is caught by the inner class's logic and will from then on be treated similarly to the regular module. Both parsing results are then encapsulated into the same intermediate representation as a \texttt{FunctionNode}. When translating this intermediate representation into the final AST representative the path of modules and module blocks splits up again as the module block is transformed into a \texttt{ModuleBlockNode} and the module is transformed into a \texttt{JSFunctionExpressionNode}. Finally as those constructs are imported, in the module's case also statically, dynamically the final result will always be a \texttt{JSModuleRecord} which is the AST's representation of the, in ECMAScript specified \cite{ecma}, Module Records. The description is also envisioned by the subsequent Figure \ref{fig:blockVSmodule} This brief difference in behavior explanation concludes the implementation chapter which is followed by the evaluation chapter detailing the testing of the, as set out above, implementation.
 
 \begin{figure}[h!]
     \centering
