added additional corrections

--- a/contents/03_Implementation.tex
+++ b/contents/03_Implementation.tex
@@ -1,7 +1,7 @@
 This chapter lays out the implementation by presenting an architectural overview on how and where the proposal can be included in the Graal.js project. This inclusion is further detailed in the upcoming sections. The implementation explanation is then wrapped up by explaining the interaction with dynamic imports and the serialization / deserialization framework.
 
 \section{General overview}
-Before thinking about implementing the proposal in the Graal.js project one needs to know how source code is evaluated by Graal.js. The path of source code going through the engine is straightforward. Without going too deep into the specifics it follows Figure \ref{fig:mainImpl}. The source code is traversed and transformed into a token stream. This token stream is then evaluated by the parser which uses the identified token in conjunction with the specified grammar given by ECMAScript \cite{ecma} to transform the token into an intermediate tree form. This tree contains nodes representing general language concepts without specifying the nodes into specialized forms. As can be seen in Figure \ref{fig:mainImpl} a module block is represented by a function node in the intermediate form. Later on in the translation pipeline the \texttt{GraalJSTranslator} class is called with an intermediate form node and translates it into a specified module block node. In the scope of this thesis a \texttt{FunctionNode} to a \texttt{ModuleBlockNode}. These specialized nodes are then executed when being visited in the tree. On the specifics of interpretation and compilation during execution see Section \ref{sec:graalcomp}. 
+Before thinking about implementing the proposal in the Graal.js project one needs to know how source code is evaluated by Graal.js. The path of source code going through the engine is straightforward. Without going too deep into the specifics it follows Figure \ref{fig:mainImpl}. The source code is traversed and transformed into a token stream. This token stream is then evaluated by the parser which uses the identified tokens in conjunction with the specified grammar given by ECMAScript \cite{ecma} to transform them into an intermediate tree form. This tree contains nodes representing general language concepts without specifying the nodes into specialized forms. As can be seen in Figure \ref{fig:mainImpl} a module block is represented by a function node in the intermediate form. Later on in the translation pipeline the \texttt{GraalJSTranslator} class is called with an intermediate form node and translates it into a specified module block node. In the scope of this thesis a \texttt{FunctionNode} to a \texttt{ModuleBlockNode}. These specialized nodes are then executed when being visited in the tree. On the specifics of interpretation and compilation during execution see Section \ref{sec:graalcomp}. 
 
 \begin{figure}[h!]
     \centering
