--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -28,9 +28,9 @@
 
 %The thesis aims at implementing an ECMAScript proposal from the TC39 proposals, the module blocks, in the existing Graal.js interpreter. Besides the initial task of changing the parser and the runtime and unit tests, a base framework for shipping code between processes is implemented and explicit benchmarks are shown. The final artifact is contributed to the open source version of Graal.js on the platform github.com.
 
-The Graal.js is an ECMAScript runtime engine and thus competes with engines like V8 by Google or SpiderMonkey by Mozilla. Although Graal.js' host environment, the GraalVM, provides the project vital advantages, the engine needs to stay ahead of the ECMAScript specification to offer full feature support. This is the entry point for this thesis' purpose, namely to implement an ECMAScript proposal from the TC39 proposals, in particular \emph{module blocks}, in the existing Graal.js project. Besides the initial task of changing the parser and the runtime, and conducting unit tests, a base framework for shipping code between processes is implemented.  It should be declared for the avoidance of doubt that the code shipping framework is not part of the proposal but rather an addition to make module block usage more feasible in practice.
+Graal.js is an ECMAScript runtime engine and thus competes with engines like V8 by Google or SpiderMonkey by Mozilla. Although Graal.js' host environment, the GraalVM, provides the project vital advantages, the engine needs to stay ahead of the ECMAScript specification to offer full feature support. This is the entry point for this thesis' purpose, namely to implement an ECMAScript proposal from the TC39 proposals, in particular \emph{module blocks}, in the existing Graal.js project. Besides the initial task of changing the parser and the runtime, and conducting unit tests, a base framework for shipping code between processes is implemented.  It should be declared for the avoidance of doubt that the code shipping framework is not part of the proposal but rather an addition to make module block usage more feasible in practice.
 
-The thesis starts with a theoretical briefing on the technologies in which the implementation resides in, i.e. the Java Virtual Machine, the GraalVM, the Truffle implementation framework, Graal.js and ECMAScript. Later on the proposal implementation and its integration into Graal.js is explained in a brief way. Since the proposal and the base framework are connected by proximity of topic the framework's implementation also resides in Chapter 3. The implementation is followed up by unit tests which are mainly self-written but mixed with code snippets from the proposal's website to prove expected behavior. A short runtime analysis testing for overhead on the implementation's part is included as well. The thesis is then wrapped up with an outlook on future work and the thesis' conclusions. The thesis practical work, i.e. the implementation, is finished by contributing the final artifact to the open source version of Graal.js on the platform github.com.
+The thesis starts with a theoretical briefing on the technologies in which the implementation resides in, i.e., the Java Virtual Machine, the GraalVM, the Truffle language implementation framework, Graal.js and ECMAScript. Later on the proposal implementation and its integration into Graal.js is explained in a brief way. Since the \emph{module blocks} proposal and the base framework are connected by proximity of topic the framework's implementation also resides in Chapter 3. The implementation is followed up by unit tests which are mainly self-written but mixed with code snippets from the proposal's online documentation to prove expected behavior. A short runtime analysis testing for overhead on the implementation's part is included as well. The thesis is then wrapped up with an outlook on future work and the thesis' conclusions. The thesis practical work, i.e. the implementation, is finished by contributing the final artifact to the open source version of Graal.js on the platform github.com.
 \pagebreak
 	{\let\clearpage\relax
 	\ifeng	\selectlanguage{ngerman} \chapter*{Zusammenfassung}
