--- a/literature.bib
+++ b/literature.bib
@@ -255,3 +255,18 @@ urldate = {2021-08-01}}
 title = {Node.js v16.6.0 documentation},
 url = {https://nodejs.org/api/worker_threads.html},
 urldate = {2021-08-01}}
+
+@online{openjdk,
+ title = {OpenJDK},
+url = {https://openjdk.java.net/},
+urldate = {2021-08-04}}
+
+@online{oracleDatabase,
+title = {Oracle Database 21c},
+url = {https://docs.oracle.com/en/database/oracle/oracle-database/21/index.html},
+urldate = {2021-08-04}}
+
+@online{babel,
+title = {Babel},
+url = {https://babeljs.io/},
+urldate = {2021-08-04}}
