--- a/mainmatter.tex
+++ b/mainmatter.tex
@@ -9,7 +9,7 @@
 
 \input{contents/02_Background}
 
-\chapter{Implementation}
+\chapter{Implementation in Graal.js}
 
 \input{contents/03_Implementation}
 
